--- a/packages/yt-videos/client/views/video_list.html
+++ b/packages/yt-videos/client/views/video_list.html
@@ -1,12 +1,12 @@
 <template name="ytVideoList">
 	<div class="container">
 		<div class="row">
-			{{_ "how_to" this.query "1" "100"}}
+			{{_ "how_to" this.query getCurrentCaption getCaptionsLength}}
 
 			<div class="caption">
-				{{#each captions}}
+				{{#with currentCaption}}
 					{{> ytVideo}}
-				{{/each}}
+				{{/with}}
 			</div>
 		</div>
 	</div>
