--- a/packages/yt-ui/styles/_variables.scss
+++ b/packages/yt-ui/styles/_variables.scss
@@ -1,1 +1,8 @@
 $font-stack: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+$background-color: #e5e0d5;
+$text-color: #6e4250;
+$placeholder-color: #9e918e;
+$button-primary: #43baaf;
+$button-primary-hover: #41a59d;
+$button-primary-border: #399b93;
+$button-primary-text: #f7f7f7;
