--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -1,5 +1,7 @@
 @import "fontawesome/font-awesome";
 @import "variables";
+@import "buttons";
+@import "forms";
 
 html {
 	width: 100%;
@@ -11,9 +13,49 @@ body {
 	margin: 0; 
 	padding: 0;
 	font-family: $font-stack;
+	background: $background-color;
+	color: $text-color;
 }
 
 .video-caption strong {
 	background-color: #ff0;
     padding: 4px;
+}
+
+header {
+	margin: 50px 0;
+}
+
+h1 {
+	color: $text-color;
+	font-size: 48px;
+	font-weight: 300;
+}
+
+.searchForm {
+
+	.query {
+		width: 90%;
+		float: left;
+		height: 47px;
+		color: $text-color;
+		font-weight: 400;
+		font-size: 18px;
+
+		&::-webkit-input-placeholder {
+		   color: #9e918e;
+		}
+	}
+
+	.search-button {
+		width: 10%;
+	}
+
+}
+
+.desc {
+	margin: 3px;
+    color: #633a46;
+    font-weight: 300;
+    font-size: 18px;
 }
