--- a/packages/yt-videos/client/views/video_list.html
+++ b/packages/yt-videos/client/views/video_list.html
@@ -1,13 +1,19 @@
 <template name="ytVideoList">
-	<div class="container">
-		<div class="row">
-			{{_ "how_to" this.query getCurrentCaption getCaptionsLength}}
+	{{> ytSearch}}
 
-			<div class="caption">
-				{{#with currentCaption}}
-					{{> ytVideo}}
-				{{/with}}
-			</div>
+	<div class="row">
+		<div class="col-md-12 search-result">
+			{{#if currentCaption}}
+				<span>{{_ "how_to" this.query getCurrentCaption getCaptionsLength}}</span>
+
+				<div class="caption">
+					{{#with currentCaption}}
+						{{> ytVideo}}
+					{{/with}}
+				</div>
+			{{else}}
+				<span>{{_ "no_results"}}</span>
+			{{/if}}
 		</div>
 	</div>
 </template>
