--- a/packages/yt-videos/client/views/video.html
+++ b/packages/yt-videos/client/views/video.html
@@ -1,9 +1,16 @@
 <template name="ytVideo">
 	<div class="video-player">
+		<div class="nav-container">
+			{{#unless isFirst}}
+				<a href="#"><i class="fa fa-angle-left nav-previous"></i></a>
+			{{/unless}}
+			{{#unless isLast}}
+				<a href="#"><i class="fa fa-angle-right nav-next"></i></a>
+			{{/unless}}
+		</div>
 		<iframe width="640" height="360" src="https://www.youtube.com/embed/{{video}}?start={{getStartTime}}&autoplay=1" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<div class="video-caption">
 		“...{{{text}}}..”
 	</div>
-
 </template>
