--- a/packages/yt-videos/client/views/video.html
+++ b/packages/yt-videos/client/views/video.html
@@ -14,6 +14,7 @@
 		“...{{{text}}}..”
 	</div>
 	<div class="nav-bottom">
+		<a href="#" class="stage-icon"><i class="fa fa-backward nav-backward"></i><div class="stage-icon-desc">-5s</div></a>
 		<a href="#"><i class="fa fa-repeat nav-repeat"></i></a>
 	</div>
 </template>
