share this video

--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -129,3 +129,24 @@ h1 {
 		margin-right: 5px;
 	}
 }
+
+.share-video {
+	margin: 35px 0;
+
+	a {
+		margin-right: 5px;
+		font-size: 20px;
+	}
+
+	.share-facebook {
+		color: #46629e;
+	}
+
+	.share-google {
+		color: #d73d32;
+	}
+
+	.share-twitter {
+		color: #55acee;
+	}
+}
