--- a/packages/yt-videos/client/views/video.html
+++ b/packages/yt-videos/client/views/video.html
@@ -17,4 +17,10 @@
 		<a href="#" class="stage-icon"><i class="fa fa-backward nav-backward"></i><div class="stage-icon-desc">-5s</div></a>
 		<a href="#"><i class="fa fa-repeat nav-repeat"></i></a>
 	</div>
+	<div class="share-video">
+		{{_ "share"}}
+		<a href="#" class="share-facebook"><i class="fa fa-facebook-square"></i></a>
+		<a href="#" class="share-twitter"><i class="fa fa-twitter-square"></i></a>
+		<a href="#" class="share-google"><i class="fa fa-google-plus-square"></i></a>
+	</div>
 </template>
