--- a/packages/yt-videos/client/views/video_list.html
+++ b/packages/yt-videos/client/views/video_list.html
@@ -1,19 +1,21 @@
 <template name="ytVideoList">
 	{{> ytSearch}}
 
-	<div class="row">
-		<div class="col-md-12 search-result">
-			{{#if currentCaption}}
-				<span>{{_ "how_to" this.query getCurrentCaption getCaptionsLength}}</span>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 search-result">
+				{{#if currentCaption}}
+					<span>{{_ "how_to" this.query getCurrentCaption getCaptionsLength}}</span>
 
-				<div class="caption">
-					{{#with currentCaption}}
-						{{> ytVideo}}
-					{{/with}}
-				</div>
-			{{else}}
-				<span>{{_ "no_results"}}</span>
-			{{/if}}
+					<div class="caption">
+						{{#with currentCaption}}
+							{{> ytVideo}}
+						{{/with}}
+					</div>
+				{{else}}
+					<span>{{_ "no_results"}}</span>
+				{{/if}}
+			</div>
 		</div>
 	</div>
 </template>
