--- a/packages/yt-ui/styles/_variables.scss
+++ b/packages/yt-ui/styles/_variables.scss
@@ -1,6 +1,6 @@
 $font-stack: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
 $background-color: #fff;
-$background-blue: #00acee;
+$background-blue: #088ed1;
 $text-color: #0c0c0c;
 $heading-color: darken($background-blue, 10);
 $placeholder-color: #9e918e;
