--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -167,10 +167,17 @@ h1 {
 
 
 .helper-keyboard {
-	margin: 5px 10px;
+	padding: 15px 0;
 
 	a {
-		margin-right: 5px;
+		margin-right: 8px;
+		font-size: 16px;
+		background: #fff;
+		padding: 3px 6px;
+
+		&:hover {
+			text-decoration: none;
+		}
 	}
 }
 
