video navigation styling

--- a/packages/yt-videos/client/views/video.html
+++ b/packages/yt-videos/client/views/video.html
@@ -14,8 +14,9 @@
 		“...{{{text}}}..”
 	</div>
 	<div class="nav-bottom">
-		<a href="#" class="stage-icon"><i class="fa fa-backward nav-backward"></i><div class="stage-icon-desc">-5s</div></a>
-		<a href="#"><i class="fa fa-repeat nav-repeat"></i></a>
+		<a href="#" class="stage-icon hvr-rotate"><i class="fa fa-backward nav-backward"></i><div class="stage-icon-desc">-5s</div></a>
+		<a href="#" class="stage-icon hvr-rotate"><i class="fa fa-repeat nav-repeat"></i><div class="stage-icon-desc">replay</div></a>
+		<a href="#" class="stage-icon hvr-rotate"><i class="fa fa-flag-o"></i><div class="stage-icon-desc">report</div></a>
 	</div>
 	<div class="share-video">
 		{{_ "share"}}
