--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -145,11 +145,16 @@ h1 {
 }
 
 .nav-bottom {
-	margin: 15px 0;
+	margin: 35px 0;
 	font-size: 36px;
 
 	a {
 		margin-right: 20px;
+		margin-right: 20px;
+    	background: #eaebec;
+    	border: 1px solid #cccccc;
+    	padding: 5px 10px;
+    	color: #333;
 	}
 }
 
@@ -160,9 +165,11 @@ h1 {
 .stage-icon-desc {
 	display: inline-block;
     position: absolute;
-    bottom: -25%;
-    left: 35%;
+    bottom: -30%;
+    left: 0;
+    text-align: center;
     font-size: 12px;
+    width: 100%;
 }
 
 
