--- a/packages/yt-videos/client/views/video.html
+++ b/packages/yt-videos/client/views/video.html
@@ -18,6 +18,7 @@
 		<a href="#" class="stage-icon hvr-rotate"><i class="fa fa-repeat nav-repeat"></i><div class="stage-icon-desc">{{_ "replay"}}</div></a>
 		<a href="#" class="stage-icon hvr-rotate" data-toggle="modal" data-target="#reportModal"><i class="fa fa-flag-o"></i><div class="stage-icon-desc">{{_ "report"}}</div></a>
 	</div>
+	{{> alerts container="video_alerts"}}
 	<div class="share-video">
 		{{_ "share"}}
 		<a href="#" class="share-facebook"><i class="fa fa-facebook-square"></i></a>
