--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -18,6 +18,13 @@ body {
 	color: $text-color;
 }
 
+.logo {
+	width: 100px;
+    float: left;
+    margin-top: 10px;
+    margin-right: 15px;
+}
+
 .examples {
 	padding-top: 25px;
     font-size: 24px;
@@ -56,7 +63,7 @@ footer {
 }
 
 header {
-	padding: 50px 0;
+	padding: 40px 0;
 	background: $background-blue;
 
 	a:hover, a:active, a:focus {
@@ -96,7 +103,7 @@ h1 {
 }
 
 .desc {
-	margin: 3px;
+	margin: 15px 3px 0 3px;;
     color: $background-color;
     font-weight: 300;
     font-size: 18px;
