similar words without accents

--- a/packages/yt-videos/client/views/video_list.html
+++ b/packages/yt-videos/client/views/video_list.html
@@ -13,7 +13,7 @@
 						{{/with}}
 					</div>
 				{{else}}
-					<span>{{_ "no_results"}}</span>
+					{{> ytNoResults}}
 				{{/if}}
 			</div>
 		</div>
