--- a/packages/yt-videos/client/views/no_results.html
+++ b/packages/yt-videos/client/views/no_results.html
@@ -1,4 +1,5 @@
-<template name="ytNoResults">
+<template name="ytNoResults">	
+	<!-- response:status-code=404 -->
 	<span>{{_ "no_results"}}</span>
 	<p class="examples">
 		{{#if Template.subscriptionsReady}}
