--- a/packages/yt-report/client/views/modal.html
+++ b/packages/yt-report/client/views/modal.html
@@ -7,7 +7,7 @@
         <div class="modal-body">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
           
-          {{> quickForm id="reportIssue" schema=getSchema }}
+          {{> quickForm id="reportIssue" schema=getSchema buttonContent=getSubmitButtonTranslation }}
 
         </div>
       </div>
