translate route to french

--- a/packages/yt-videos/client/views/no_results.html
+++ b/packages/yt-videos/client/views/no_results.html
@@ -7,7 +7,7 @@
 				{{#if this.count}}
 					{{_ "may_check"}} 
 					{{#each this}}
-						<a href="/pronounce/{{text}}" class="hvr-underline-from-left">{{text}}</a>
+						<a href="/prononciation/{{text}}" class="hvr-underline-from-left">{{text}}</a>
 					{{/each}}
 				{{/if}}
 			{{/with}}
