--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -155,6 +155,12 @@ footer {
 	}
 }
 
+.about h1 {
+	font-size: 24px;
+	font-weight: bold;
+	color: $heading-color;
+}
+
 .search-result {
 	margin: 20px 0;
 
