--- a/packages/yt-videos/client/views/video_list.html
+++ b/packages/yt-videos/client/views/video_list.html
@@ -1,7 +1,7 @@
 <template name="ytVideoList">
 	{{> ytSearch}}
 
-	<div class="container">
+	<div class="main-content container">
 		<div class="row">
 			<div class="col-md-12 search-result">
 				{{#if currentCaption}}
