remove rotate on hover in nav icons

--- a/packages/yt-ui/styles/styles.scss
+++ b/packages/yt-ui/styles/styles.scss
@@ -327,6 +327,12 @@ iframe {
 	}
 }
 
+.nav-icon {
+	&:hover i {
+		color: $background-blue;
+	}
+}
+
 @media(min-width: 768px) {
 	.logo {
 		display: block;
