--- a/packages/yt-videos/client/views/video.html
+++ b/packages/yt-videos/client/views/video.html
@@ -20,9 +20,9 @@
 		</div>
 		{{> alerts container="video_alerts"}}
 		<div class="nav-bottom">
-			<a href="#" class="stage-icon hvr-rotate"><i class="fa fa-backward nav-backward"></i><div class="stage-icon-desc">-5s</div></a>
-			<a href="#" class="stage-icon hvr-rotate"><i class="fa fa-repeat nav-repeat"></i><div class="stage-icon-desc">{{_ "replay"}}</div></a>
-			<a href="#" class="stage-icon hvr-rotate" data-toggle="modal" data-target="#reportModal"><i class="fa fa-flag-o nav-report"></i><div class="stage-icon-desc">{{_ "report"}}</div></a>
+			<a href="#" class="stage-icon nav-icon"><i class="fa fa-backward nav-backward"></i><div class="stage-icon-desc">-5s</div></a>
+			<a href="#" class="stage-icon nav-icon"><i class="fa fa-repeat nav-repeat"></i><div class="stage-icon-desc">{{_ "replay"}}</div></a>
+			<a href="#" class="stage-icon nav-icon" data-toggle="modal" data-target="#reportModal"><i class="fa fa-flag-o nav-report"></i><div class="stage-icon-desc">{{_ "report"}}</div></a>
 		</div>	
 
 		{{> ytReportModal}}
